Core: Update IPC implementation framework
Initial IPC patches showcases API usage with a rough design. To follow
PSA FF specification, an updated framework needs to take place instead
of previous design.
The modification details are:
- Remove legacy version files which unused anymore: psa_api.c,
  tfm_queue.c, tfm_queue.h, tfm_thread.c and tfm_thread.h.
- Add psa client and service implement on secure side in thread mode.
- Add syscalls for psa client and service, empty now and to be
  implemented.
- Those files in 'core' folder which needed by ipc will be added in
  'ipc' folder. So there is no ipc file to be built in 'library' mode.

Change-Id: I5ab5ea2774dfb70b24f4bfd0499129ae48b2b3de
Signed-off-by: Edison Ai <edison.ai@arm.com>
Co-authored-by: Ken Liu <ken.liu@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2017-2019, Arm Limited. All rights reserved.
+# Copyright (c) 2017-2018, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -28,11 +28,12 @@ if (NOT DEFINED TFM_LVL)
 endif()
 
 include(${SECURE_FW_DIR}/spm/CMakeLists.inc)
-include(${SECURE_FW_DIR}/core/CMakeLists.inc)
 include(${SECURE_FW_DIR}/ns_callable/CMakeLists.inc)
-# Involve IPC sources only PSA APIs are there
+#Involve all IPC related sources in ipc's CMakeLists.inc, and switch core between IPC and Library.
 if(TFM_PSA_API)
 	include(${SECURE_FW_DIR}/core/ipc/CMakeLists.inc)
+else()
+	include(${SECURE_FW_DIR}/core/CMakeLists.inc)
 endif()
 
 set(BUILD_CMSIS_CORE On)
