Crypto: Add support for HMAC functionalities
This patch introduces support for the HMAC functionalities.
The HMAC construction procedure is as described by RFC-2104.
It also adds the related Regression test suite to validate
the API implementation.

Change-Id: I622d866b34ba7e3a3e61e1a28d43fb80e49fd8ec
Signed-off-by: Louis Mayencourt <louis.mayencourt@arm.com>

--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -137,6 +137,54 @@
       "minor_version": 1,
       "minor_policy": "strict"
     },
+    {
+      "sfid": "TFM_CRYPTO_MAC_SIGN_SETUP_SFID",
+      "signal": "TFM_CRYPTO_MAC_SIGN_SETUP",
+      "tfm_symbol": "tfm_crypto_mac_sign_setup",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_MAC_VERIFY_SETUP_SFID",
+      "signal": "TFM_CRYPTO_MAC_VERIFY_SETUP",
+      "tfm_symbol": "tfm_crypto_mac_verify_setup",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_MAC_UPDATE_SFID",
+      "signal": "TFM_CRYPTO_MAC_UPDATE",
+      "tfm_symbol": "tfm_crypto_mac_update",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_MAC_SIGN_FINISH_SFID",
+      "signal": "TFM_CRYPTO_MAC_SIGN_FINISH",
+      "tfm_symbol": "tfm_crypto_mac_sign_finish",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_MAC_VERIFY_FINISH_SFID",
+      "signal": "TFM_CRYPTO_MAC_VERIFY_FINISH",
+      "tfm_symbol": "tfm_crypto_mac_verify_finish",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_MAC_ABORT_SFID",
+      "signal": "TFM_CRYPTO_MAC_ABORT",
+      "tfm_symbol": "tfm_crypto_mac_abort",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
   ],
   "source_files": [
     "crypto_alloc.c",
@@ -147,6 +195,7 @@
     "crypto_utils.c",
     "crypto_hash.c",
     "crypto_engine.c",
+    "crypto_mac.c"
   ],
   "tfm_linker_pattern": [
     "library_list": [
