Core: Initial implementation of sec IRQ handling
This commit makes possible for partitions to define IRQ handlers that
are executed in case of an interrupt is triggered, with the isolation
required by TFM_LVL settings.

Detailed changes:
 - Add template files to generate code for configuring IRQs, and set
   up IRQ handlers based on information provided in the partition's
   manifest
 - Add capability to Core to isolate the IRQ handlers
 - Add documentation

Change-Id: I0e46b9a41fb4e20ca4c398acf5ce1d4027e8597f
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/docs/index.rst.in
+++ b/docs/index.rst.in
@@ -29,6 +29,7 @@ Welcome to TF-M's documentation!
     docs/user_guides/tfm_integration_guide
     docs/user_guides/tfm_ns_client_identification
     docs/user_guides/tfm_secure_boot
+    docs/user_guides/tfm_secure_irq_handling
 
 .. toctree::
     :maxdepth: 2
