--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -36,6 +36,14 @@
       "version_minor": 1
     },
     {
+      "name": "TFM Platform Service",
+      "short_name": "TFM_SP_Platform",
+      "manifest": "secure_fw/services/platform/manifest.yaml",
+      "tfm_extensions": true,
+      "version_major": 0,
+      "version_minor": 1
+    },
+    {
       "name": "TFM Core Test Service",
       "short_name": "TFM_Core_Test",
       "manifest": "test/test_services/tfm_core_test/manifest.yaml",
