Platform: Repartition RAM area in Musca A1
This patch increases the secure RAM memory size (96KB) for the secure
environment and decreases it for the non-secure one (32KB) in order
to accommodate them to the memory requirements of regression tests in
Musca A1.
When it is not required to run the regression tests, the RAM memory
partition is the original one which is 64KB of RAM for each execution
environment.

Change-Id: I19336c875f740bb86cdf734d8f8779fa944f6710
Signed-off-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/bl2/ext/mcuboot/CMakeLists.txt
+++ b/bl2/ext/mcuboot/CMakeLists.txt
@@ -116,6 +116,18 @@ config_setting_shared_linker_flags(${PROJECT_NAME})
 #Add BL2 define to linker to resolve symbols in region_defs.h
 embedded_set_target_link_defines(TARGET ${PROJECT_NAME} DEFINES "BL2")
 
+if(NOT DEFINED TEST_FRAMEWORK_S)
+	message(FATAL_ERROR "Incomplete build configuration: TEST_FRAMEWORK_S is undefined.")
+elseif(TEST_FRAMEWORK_S)
+	embedded_set_target_link_defines(TARGET ${PROJECT_NAME} DEFINES "TEST_FRAMEWORK_S")
+endif()
+
+if(NOT DEFINED TEST_FRAMEWORK_NS)
+	message(FATAL_ERROR "Incomplete build configuration: TEST_FRAMEWORK_NS is undefined.")
+elseif(TEST_FRAMEWORK_NS)
+	embedded_set_target_link_defines(TARGET ${PROJECT_NAME} DEFINES "TEST_FRAMEWORK_NS")
+endif()
+
 #Link mbedcrypto library to project
 target_link_libraries(${PROJECT_NAME} "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
 add_dependencies(${PROJECT_NAME} ${MBEDTLS_TARGET_NAME}_install)
