Crypto: Modularise the interaction with crypto primitives
This patch creates an engine layer inside the service to
modularise all the operations that involve cryptography
primitives.
It also updates the service documentation, fixes some minor
issues in the NS crypto interface test suite, and updates the
manifest file for the crypto service removing outdated functions.

Change-Id: Id2d0e2140741debd22c145f816a4df2ab0351b58
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/secure_fw/services/crypto/CMakeLists.txt
+++ b/secure_fw/services/crypto/CMakeLists.txt
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -21,17 +21,21 @@ embedded_project_fixup()
 ###Some project global settings
 set (CRYPTO_DIR "${CMAKE_CURRENT_LIST_DIR}")
 get_filename_component(TFM_ROOT_DIR "${CRYPTO_DIR}/../../.." ABSOLUTE)
-#Define location of mbed TLS source, build, and installation directory.
-get_filename_component(MBEDTLS_SOURCE_DIR "${TFM_ROOT_DIR}/../mbedtls" ABSOLUTE)
-set (MBEDTLS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbedtls")
-set (MBEDTLS_INSTALL_DIR ${MBEDTLS_BINARY_DIR}/mbedtls_install)
-set (MBEDTLS_TARGET_NAME "mbedtls_crypto_lib")
-
-#Set mbed TLS compiler flags
-set(MBEDTLS_C_FLAGS ${MBEDTLS_C_FLAGS_SERVICES})
 
 ###Get the definition of what files we need to build
 set (ENABLE_CRYPTO ON)
+if (NOT DEFINED CRYPTO_ENGINE_MBEDTLS)
+    set (CRYPTO_ENGINE_MBEDTLS ON)
+endif()
+
+if (CRYPTO_ENGINE_MBEDTLS)
+  #Define location of mbed TLS source, build, and installation directory.
+  get_filename_component(MBEDTLS_SOURCE_DIR "${TFM_ROOT_DIR}/../mbedtls" ABSOLUTE)
+  set (MBEDTLS_BINARY_DIR "${CMAKE_CURRENT_BINARY_DIR}/mbedtls")
+  set (MBEDTLS_INSTALL_DIR ${MBEDTLS_BINARY_DIR}/mbedtls_install)
+  set (MBEDTLS_TARGET_NAME "mbedtls_crypto_lib")
+endif()
+
 include(CMakeLists.inc)
 
 ###Configure how we build our target
@@ -41,23 +45,31 @@ else()
   set (TFM_LVL 1)
 endif()
 
-#Set preinclude header options for mbed TLS
-set(MBEDTLS_PREINCLUDE_PREFIX __tfm_crypto__)
-set(MBEDTLS_PREINCLUDE_HEADER ${CRYPTO_DIR}/mbedtls_global_symbols.h)
+if (CRYPTO_ENGINE_MBEDTLS)
+  #Set mbed TLS compiler flags
+  set(MBEDTLS_C_FLAGS ${MBEDTLS_C_FLAGS_SERVICES})
 
-#Build mbed TLS as external project.
-#This ensures mbed TLS is built with exactly defined settings.
-#mbed TLS will be used from its install location
-include(${TFM_ROOT_DIR}/BuildMbedtls.cmake)
+  #Set preinclude header options for mbed TLS
+  set(MBEDTLS_PREINCLUDE_PREFIX __tfm_crypto__)
+  set(MBEDTLS_PREINCLUDE_HEADER ${CRYPTO_DIR}/mbedtls_global_symbols.h)
+
+  #Build mbed TLS as external project.
+  #This ensures mbed TLS is built with exactly defined settings.
+  #mbed TLS will be used from its install location
+  include(${TFM_ROOT_DIR}/BuildMbedtls.cmake)
+endif()
 
 #Specify what we build (for the crypto service, build as a static library)
 add_library(tfm_crypto STATIC ${ALL_SRC_ASM} ${ALL_SRC_C})
-embedded_set_target_compile_defines(TARGET tfm_crypto LANGUAGE C DEFINES __ARM_FEATURE_CMSE=3 __thumb2__ TFM_LVL=${TFM_LVL} MBEDTLS_CONFIG_FILE="platform/ext/common/tfm_mbedtls_config.h")
-#Add a dependency on the mbed_tls_lib_install target.
-add_dependencies(tfm_crypto ${MBEDTLS_TARGET_NAME}_install)
-#Ask the compiler to merge the mbed TLS and the secure storage libraries.
-compiler_merge_library(DEST tfm_crypto LIBS "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
-
+if (CRYPTO_ENGINE_MBEDTLS)
+  embedded_set_target_compile_defines(TARGET tfm_crypto LANGUAGE C DEFINES __ARM_FEATURE_CMSE=3 __thumb2__ TFM_LVL=${TFM_LVL} MBEDTLS_CONFIG_FILE="platform/ext/common/tfm_mbedtls_config.h" TFM_CRYPTO_ENGINE_MBEDTLS)
+  #Add a dependency on the mbed_tls_lib_install target.
+  add_dependencies(tfm_crypto ${MBEDTLS_TARGET_NAME}_install)
+  #Ask the compiler to merge the mbed TLS and the crypto libraries.
+  compiler_merge_library(DEST tfm_crypto LIBS "${MBEDTLS_INSTALL_DIR}/lib/${CMAKE_STATIC_LIBRARY_PREFIX_C}mbedcrypto${CMAKE_STATIC_LIBRARY_SUFFIX_C}")
+else()
+  embedded_set_target_compile_defines(TARGET tfm_crypto LANGUAGE C DEFINES __ARM_FEATURE_CMSE=3 __thumb2__ TFM_LVL=${TFM_LVL})
+endif()
 #Set common compiler and linker flags
 config_setting_shared_compiler_flags(tfm_crypto)
 config_setting_shared_linker_flags(tfm_crypto)
