Docs: Consistently refer to Musca-A
Updates documents and comments to consistently refer to Musca-A, rather
than using a mix of Musca-A and Musca-A1.

Change-Id: I3a22b604cb06621842ddc4d6904c145dc0fcb890
Signed-off-by: Jamie Fox <jamie.fox@arm.com>

--- a/test/test_services/tfm_secure_client_service/manifest.yaml
+++ b/test/test_services/tfm_secure_client_service/manifest.yaml
@@ -42,7 +42,7 @@
       "*uart_stdout.*",
       "*Driver_USART.*",
       "*arm_uart_drv.*",   # MPS2-AN521, MPS2-AN519
-      "*uart_pl011_drv.*", # Musca-A1, Musca-B1
+      "*uart_pl011_drv.*", # Musca-A, Musca-B1
       "*secure_suites.*",
       "*attestation_s_interface_testsuite.*"
     ]
