--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -185,6 +185,22 @@
       "minor_version": 1,
       "minor_policy": "strict"
     },
+    {
+      "sfid": "TFM_CRYPTO_AEAD_DECRYPT_SFID",
+      "signal": "TFM_CRYPTO_AEAD_DECRYPT",
+      "tfm_symbol": "tfm_crypto_aead_decrypt_wrapper",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CRYPTO_AEAD_ENCRYPT_SFID",
+      "signal": "TFM_CRYPTO_AEAD_ENCRYPT",
+      "tfm_symbol": "tfm_crypto_aead_encrypt_wrapper",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
+    },
   ],
   "source_files": [
     "crypto_alloc.c",
@@ -195,7 +211,8 @@
     "crypto_utils.c",
     "crypto_hash.c",
     "crypto_engine.c",
-    "crypto_mac.c"
+    "crypto_mac.c",
+    "crypto_aead.c",
   ],
   "tfm_linker_pattern": [
     "library_list": [
