Manifest: Use Jinja2 for template generation
Use Jinja2 template engine to generate code from templates. This makes
the custom generator scripts in the tools directory obsolete.
For more info on Jina please see http://jinja.pocoo.org/

Details:
 - rewrite template files to use jinja2 syntax
 - remove fixmes for limitations of the template generator script
 - fix crypto and attest partition manifest yaml file
 - remove obsolete template generator scripts
 - rewrite tfm_parse_manifest_list.py to use the jinja2 template engine
 - update documentation

Change-Id: Iccceae7a5e14e5c5d6c6b5bcdf08a53137d81458
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/interface/include/tfm_veneers.h.template
+++ b/interface/include/tfm_veneers.h.template
@@ -5,7 +5,7 @@
  *
  */
 
-@!GENERATOR_DONOTEDIT_WARNING!@
+{{utilities.donotedit_warning}}
 
 #ifndef __TFM_VENEERS_H__
 #define __TFM_VENEERS_H__
@@ -16,17 +16,19 @@
 extern "C" {
 #endif
 
-@!GENERATOR_BLOCK_START!@
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#ifdef @@attr.conditional@@
-@!GENERATOR_CONDITIONAL_END!@
-/******** @@manifest.name@@ ********/
-psa_status_t tfm_@@manifest.secure_functions.tfm_symbol@@_veneer(struct psa_invec *in_vec, size_t in_len, struct psa_outvec *out_vec, size_t out_len);
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#endif /* @@attr.conditional@@ */
-@!GENERATOR_CONDITIONAL_END!@
+{% for manifest in manifests %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+/******** {{manifest.manifest.name}} ********/
+    {% for function in manifest.manifest.secure_functions%}
+psa_status_t tfm_{{function.tfm_symbol}}_veneer(struct psa_invec *in_vec, size_t in_len, struct psa_outvec *out_vec, size_t out_len);
+    {% endfor %}
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-@!GENERATOR_BLOCK_END!@
+{% endfor %}
 #ifdef __cplusplus
 }
 #endif
