--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -39,9 +39,9 @@
     "attest_token.c",
     "tfm_attestation.c",
   ],
-  "tfm_linker_pattern": [
+  "tfm_linker_pattern": {
     "library_list": [
       "*tfm_attest*"
     ]
-  ]
+  }
 }
