--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -5,23 +5,25 @@
  *
  */
 
-@!GENERATOR_DONOTEDIT_WARNING!@
+{{utilities.donotedit_warning}}
 
 #include "tfm_secure_api.h"
 #include "tfm_api.h"
 #include "secure_fw/spm/spm_partition_defs.h"
 
-@!GENERATOR_BLOCK_START!@
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#ifdef @@attr.conditional@@
-@!GENERATOR_CONDITIONAL_END!@
-/******** @@manifest.name@@ ********/
-psa_status_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t, struct psa_outvec *, size_t);
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#endif /* @@attr.conditional@@ */
-@!GENERATOR_CONDITIONAL_END!@
+{% for manifest in manifests %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+/******** {{manifest.manifest.name}} ********/
+    {% for sec_func in manifest.manifest.secure_functions %}
+psa_status_t {{sec_func.tfm_symbol}}(struct psa_invec *, size_t, struct psa_outvec *, size_t);
+    {% endfor %}
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-@!GENERATOR_BLOCK_END!@
+{% endfor %}
 
 #define TFM_VENEER_FUNCTION(partition_name, sfn_name) \
     __tfm_secure_gateway_attributes__ \
@@ -35,14 +37,16 @@ psa_status_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t
                                    in_vec, in_len, out_vec, out_len); \
     }
 
-@!GENERATOR_BLOCK_START!@
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#ifdef @@attr.conditional@@
-@!GENERATOR_CONDITIONAL_END!@
-/******** @@manifest.name@@ ********/
-TFM_VENEER_FUNCTION(@@manifest.name@@, @@manifest.secure_functions.tfm_symbol@@)
-@!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
-#endif /* @@attr.conditional@@ */
-@!GENERATOR_CONDITIONAL_END!@
+{% for manifest in manifests %}
+    {% if manifest.attr.conditional %}
+#ifdef {{manifest.attr.conditional}}
+    {% endif %}
+/******** {{manifest.manifest.name}} ********/
+    {% for sec_func in manifest.manifest.secure_functions %}
+TFM_VENEER_FUNCTION({{manifest.manifest.name}}, {{sec_func.tfm_symbol}})
+    {% endfor %}
+    {% if manifest.attr.conditional %}
+#endif /* {{manifest.attr.conditional}} */
+    {% endif %}
 
-@!GENERATOR_BLOCK_END!@
+{% endfor %}
