Core: fix NSPM default client ID assignment
If TFM_NS_CLIENT_IDENTIFICATION build option is disabled,
always use default NS client id of -1

Change-Id: I565bafd7eac9c30ec4e027ff9925ca483a875d9f
Signed-off-by: Miklos Balint <miklos.balint@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -47,10 +47,17 @@ set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${INTERFACE_DIR}/src/tfm_audit_api.c"
 	"${INTERFACE_DIR}/src/tfm_crypto_api.c"
 	"${INTERFACE_DIR}/src/tfm_platform_api.c"
-	"${INTERFACE_DIR}/src/tfm_nspm_svc_handler.c"
-	"${INTERFACE_DIR}/src/tfm_nspm_api.c"
 	"${INTERFACE_DIR}/src/tfm_ns_lock_rtx.c"
 	)
+
+if (NOT DEFINED TFM_NS_CLIENT_IDENTIFICATION)
+	message(FATAL_ERROR "Incomplete build configuration: TFM_NS_CLIENT_IDENTIFICATION is undefined.")
+elseif (TFM_NS_CLIENT_IDENTIFICATION)
+	list(APPEND NS_APP_SRC
+		"${INTERFACE_DIR}/src/tfm_nspm_svc_handler.c"
+		"${INTERFACE_DIR}/src/tfm_nspm_api.c"
+		)
+endif()
 
 set(BUILD_CMSIS_CORE On)
 set(BUILD_RETARGET On)
