--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -1,18 +1,16 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "AUDIT_LOG",
-  "type": "TRUSTED",
-  "tfm_partition_name": "TFM_SP_AUDIT_LOG",
-  "tfm_trusted": true,
+  "name": "TFM_SP_AUDIT_LOG",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000101",
-  "entry_point": "main",
+  "entry_point": "audit_core_init",
   "stack_size": "0x1000",
   "heap_size": "0x0400",
   "mmio_regions" : [
@@ -22,7 +20,6 @@
       "conditional": "AUDIT_UART_REDIRECTION"
     }
   ],
-  "tfm_init_symbol": "audit_core_init",
   "secure_functions": [
     {
       "sfid": "TFM_AUDIT_RETRIEVE_RECORD_SFID",
