--- a/secure_fw/services/crypto/manifest.yaml
+++ b/secure_fw/services/crypto/manifest.yaml
@@ -1,21 +1,18 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "CRYPTO",
-  "type": "TRUSTED",
-  "tfm_partition_name": "TFM_SP_CRYPTO",
-  "tfm_trusted": true,
+  "name": "TFM_SP_CRYPTO",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000102",
-  "entry_point": "main",
+  "entry_point": "tfm_crypto_init",
   "stack_size": "0x2000",
   "heap_size": "0x0400",
-  "tfm_init_symbol": "tfm_crypto_init",
   "secure_functions": [
     {
       "sfid": "TFM_CRYPTO_ALLOC_OPERATION_SFID",
