--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -1,18 +1,16 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "INITIAL_ATTESTATION",
-  "type": "TRUSTED",
-  "tfm_partition_name": "TFM_SP_INITIAL_ATTESTATION",
-  "tfm_trusted": true,
+  "name": "TFM_SP_INITIAL_ATTESTATION",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000103",
-  "entry_point": "main",
+  "entry_point": "attest_init",
   "stack_size": "0x0400",
   "heap_size": "0x0400",
   "tfm_init_symbol": "attest_init",
