--- a/secure_fw/services/platform/manifest.yaml
+++ b/secure_fw/services/platform/manifest.yaml
@@ -1,21 +1,18 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "SP_PLATFORM",
-  "type": "TRUSTED",
-  "tfm_partition_name": "TFM_SP_PLATFORM",
-  "tfm_trusted": true,
+  "name": "TFM_SP_PLATFORM",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000102",
-  "entry_point": "main",
+  "entry_point": "platform_sp_init",
   "stack_size": "0x0400",
   "heap_size": "0x0400",
-  "tfm_init_symbol": "platform_sp_init",
   "secure_functions": [
     {
       "sfid": "TFM_SP_PLATFORM_SYSTEM_RESET_SFID",
