--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -1,21 +1,18 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "SST",
-  "type": "TRUSTED",
-  "tfm_partition_name": "TFM_SP_STORAGE",
-  "tfm_trusted": true,
+  "name": "TFM_SP_STORAGE",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000100",
-  "entry_point": "main",
+  "entry_point": "sst_am_prepare",
   "stack_size": "0x2000",
   "heap_size": "0x0400",
-  "tfm_init_symbol": "sst_am_prepare",
   "secure_functions": [
     {
       "sfid": "SST_AM_CREATE_SFID",
