--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -1,17 +1,16 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "TFM_CORE_TEST",
-  "tfm_partition_name": "TFM_SP_CORE_TEST",
-  "type": "SECURE",
+  "name": "TFM_SP_CORE_TEST",
+  "type": "APPLICATION-ROT",
   "priority": "NORMAL",
   "id": "0x00000002",
-  "entry_point": "main",
+  "entry_point": "core_test_init",
   "stack_size": "0x0400",
   "heap_size": "0x0400",
   "mmio_regions": [
@@ -20,7 +19,6 @@
       "permission": "READ-WRITE"
     }
   ],
-  "tfm_init_symbol": "core_test_init",
   "secure_functions": [
     {
       "sfid": "TFM_CORE_TEST_SFN_SFID",
