--- a/test/test_services/tfm_core_test_2/manifest.yaml
+++ b/test/test_services/tfm_core_test_2/manifest.yaml
@@ -1,20 +1,18 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "TFM_CORE_TEST_2",
-  "tfm_partition_name": "TFM_SP_CORE_TEST_2",
-  "type": "SECURE",
+  "name": "TFM_SP_CORE_TEST_2",
+  "type": "APPLICATION-ROT",
   "priority": "NORMAL",
   "id": "0x00000003",
-  "entry_point": "main",
+  "entry_point": "core_test_2_init",
   "stack_size": "0x0400",
   "heap_size": "0x0400",
-  "tfm_init_symbol": "core_test_2_init",
   "secure_functions": [
     {
       "sfid": "TFM_CORE_TEST_2_SFN_SLAVE_SERVICE_SFID",
