--- a/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
+++ b/test/test_services/tfm_ipc_client/tfm_ipc_client_partition.yaml
@@ -6,15 +6,14 @@
 #-------------------------------------------------------------------------------
 
 {
-  "name": "IPC_CLIENT",
-  "type": "SECURE",
-  "tfm_partition_name": "TFM_SP_IPC_CLIENT_TEST",
+  "name": "TFM_SP_IPC_CLIENT_TEST",
+  "type": "APPLICATION-ROT",
   "priority": "NORMAL",
   "id": "0x00000006",
-  "entry_point": "main",
+  "entry_point": "ipc_client_init",
   "stack_size": "0x1000",
-  "heap_size": "0x0400",
-  "tfm_init_symbol": "ipc_client_init",
+  "heap_size": "0",
+  "tfm_partition_ipc": true,
   "source_files": [
     "ipc_client_test.c",
   ],
