--- a/test/test_services/tfm_secure_client_service/manifest.yaml
+++ b/test/test_services/tfm_secure_client_service/manifest.yaml
@@ -1,18 +1,16 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
 #-------------------------------------------------------------------------------
 
 {
-  "name": "TFM_SECURE_CLIENT",
-  "tfm_partition_name": "TFM_SP_SECURE_TEST_PARTITION",
-  "type": "TRUSTED",
-  "tfm_trusted": true,
+  "name": "TFM_SP_SECURE_TEST_PARTITION",
+  "type": "PSA-ROT",
   "priority": "NORMAL",
   "id": "0x00000005",
-  "entry_point": "main",
+  "entry_point": "tfm_secure_client_service_init",
   "stack_size": "0x1000",
   "heap_size": "0x0400",
   "mmio_regions": [
@@ -21,7 +19,6 @@
       "permission": "READ-WRITE"
     }
   ],
-  "tfm_init_symbol": "tfm_secure_client_service_init",
   "secure_functions": [
     {
       "sfid": "TFM_SECURE_CLIENT_SFN_RUN_TESTS_SFID",
