--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -1,5 +1,5 @@
 #-------------------------------------------------------------------------------
-# Copyright (c) 2018, Arm Limited. All rights reserved.
+# Copyright (c) 2018-2019, Arm Limited. All rights reserved.
 #
 # SPDX-License-Identifier: BSD-3-Clause
 #
@@ -22,9 +22,9 @@
         "output": "secure_fw/services/tfm_partition_list.inc"
     },
     {
-        "name": "Secure Function list",
-        "short_name": "tfm_sfid_list",
-        "output": "secure_fw/services/tfm_sfid_list.inc"
+        "name": "Secure Service list",
+        "short_name": "tfm_service_list",
+        "output": "secure_fw/services/tfm_service_list.inc"
     },
     {
         "name": "AN521 secure ld file",
