Platform: Add device ID support
Add a getter function to platform code, to retrieve
the Universal Entity ID (UEID) of the device.

Change-Id: Id1f9abc5e96409da463098e92230099c1983c0c9
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -71,6 +71,7 @@ set(BUILD_CMSIS_DRIVERS On)
 set(BUILD_UART_STDOUT Off)
 set(BUILD_FLASH Off)
 set(BUILD_BOOT_SEED Off)
+set(BUILD_DEVICE_ID Off)
 if(NOT DEFINED PLATFORM_CMAKE_FILE)
 	message (FATAL_ERROR "Platform specific CMake is not defined. Please set PLATFORM_CMAKE_FILE.")
 elseif(NOT EXISTS ${PLATFORM_CMAKE_FILE})
