Manifest: fix Attest service partition manifest
Change-Id: I9d565aab21155bfc2b7247aec47cd6ca0bc03a35
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/secure_fw/services/initial_attestation/manifest.yaml
+++ b/secure_fw/services/initial_attestation/manifest.yaml
@@ -20,7 +20,7 @@
     {
       "sfid": "TFM_ATTEST_GET_TOKEN_SFID",
       "signal": "TFM_ATTEST_GET_TOKEN",
-      "tfm_symbol": "attest_get_token",
+      "tfm_symbol": "initial_attest_get_token",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
