Core: change iovec return type to psa_status_t
 - Change the return type of the iovec veneer functions to psa_status_t.
 - Modify TF-M core to forward any return value from secure functions
   that use iovec API to the caller.
 - Update Core test services to use negative return values for
   error, and zero or positive values for successful secure function
   execution.

Change-Id: I5b42a194b955fd003c90d6dfd654ab55be483d20
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/interface/include/tfm_veneers.h.template
+++ b/interface/include/tfm_veneers.h.template
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Arm Limited. All rights reserved.
+ * Copyright (c) 2018-2019, Arm Limited. All rights reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  *
@@ -21,7 +21,7 @@ extern "C" {
 #ifdef @@attr.conditional@@
 @!GENERATOR_CONDITIONAL_END!@
 /******** @@manifest.tfm_partition_name@@ ********/
-int32_t tfm_@@manifest.secure_functions.tfm_symbol@@_veneer(struct psa_invec *in_vec, size_t in_len, struct psa_outvec *out_vec, size_t out_len);
+psa_status_t tfm_@@manifest.secure_functions.tfm_symbol@@_veneer(struct psa_invec *in_vec, size_t in_len, struct psa_outvec *out_vec, size_t out_len);
 @!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
 #endif /* @@attr.conditional@@ */
 @!GENERATOR_CONDITIONAL_END!@
