--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Arm Limited. All rights reserved.
+ * Copyright (c) 2018-2019, Arm Limited. All rights reserved.
  *
  * SPDX-License-Identifier: BSD-3-Clause
  *
@@ -16,7 +16,7 @@
 #ifdef @@attr.conditional@@
 @!GENERATOR_CONDITIONAL_END!@
 /******** @@manifest.tfm_partition_name@@ ********/
-int32_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t, struct psa_outvec *, size_t);
+psa_status_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t, struct psa_outvec *, size_t);
 @!GENERATOR_CONDITIONAL_START!@ @@attr.conditional@@
 #endif /* @@attr.conditional@@ */
 @!GENERATOR_CONDITIONAL_END!@
@@ -25,10 +25,10 @@ int32_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t, str
 
 #define TFM_VENEER_FUNCTION(partition_name, sfn_name) \
     __tfm_secure_gateway_attributes__ \
-    int32_t tfm_##sfn_name##_veneer(struct psa_invec *in_vec, \
-                                    size_t in_len, \
-                                    struct psa_outvec *out_vec, \
-                                    size_t out_len) \
+    psa_status_t tfm_##sfn_name##_veneer(struct psa_invec *in_vec, \
+                                         size_t in_len, \
+                                         struct psa_outvec *out_vec, \
+                                         size_t out_len) \
     { \
         TFM_CORE_IOVEC_SFN_REQUEST(partition_name##_ID, \
                                    sfn_name, \
